--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Franky</h2>
-                <p class="descricao">Franky, também conhecido como "Cutty Flam" (seu nome original), foi o sétimo a entrar no bando dos Chapéus de Palha. Ele é o construtor naval do grupo, sua recompensa é a sétima maior da tripulação. Seu objetivo é criar e dirigir um navio capaz de dar a volta no mundo, o Thousand Sunny.
+                <p class="descricao">Franky, também conhecido como "Cutty Flam" (seu nome original), foi o sétimo a entrar no bando dos Chapéus de Palha. Ele é o construtor naval do grupo, sua recompensa é a sétima maior da tripulação. Seu objetivo é criar e dirigir um navio capaz de dar a volta no mundo, o Thousand Sunny. </p>
             </div>
         </div>
 
